created refresh-logic and code refactoring
