# swagger.json
@@ -72,7 +72,55 @@
         },
         "responses": {
           "200": {
-            "description": "User is logged in"
+            "description": "User is logged in",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string"
+                    },
+                    "code": {
+                      "type": "integer"
+                    },
+                    "result": {
+                      "type": "object",
+                      "properties": {
+                        "name": {
+                          "type": "string"
+                        },
+                        "role": {
+                          "type": "string"
+                        },
+                        "accessToken": {
+                          "type": "string"
+                        },
+                        "refreshToken": {
+                          "type": "string"
+                        },
+                        "expires_on": {
+                          "type": "integer"
+                        }
+                      }
+                    }
+                  },
+                  "example": {
+                    "status": "success",
+                    "code": 200,
+                    "result": {
+                      "name": "Tolik",
+                      "role": "student",
+                      "token": {
+                        "accessToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MDcyYzJjNmY1N2VlYzM1ZDAwYjk0OGUiLCJ0eXBlIjoiYWNjZXNzIiwiaWF0IjoxNjE4MTQwMDU1LCJleHAiOjE2MTgxNDE4NTV9.-X9Oms9dvb6kv_ExMrHZCZAIRcAyaFDpsEQoZQNFdm4",
+                        "refreshToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MDcyYzJjNmY1N2VlYzM1ZDAwYjk0OGUiLCJ0eXBlIjoicmVmcmVzaCIsImlhdCI6MTYxODE0MjM1MCwiZXhwIjoxNjIwNzM0MzUwf0.BUMyBKpweOqew9X4EcWTaYpJZUU0sS5UMGBR_XbXJn8",
+                        "expires_on": 1618141850729
+                      }
+                    }
+                  }
+                }
+              }
+            }
           },
           "400": {
             "description": "Invalid email / password supplied"
@@ -107,6 +155,79 @@
           "500": {
             "description": "Server error"
           }
+        }
+      }
+    },
+    "/auth/refresh-token": {
+      "post": {
+        "tags": ["User"],
+        "summary": "Renews access token by refresh token",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["refreshToken"],
+                "properties": {
+                  "refreshToken": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Access token renewed",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string"
+                    },
+                    "code": {
+                      "type": "integer"
+                    },
+                    "result": {
+                      "type": "object",
+                      "properties": {
+                        "name": {
+                          "type": "string"
+                        },
+                        "accessToken": {
+                          "type": "string"
+                        },
+                        "expires_on": {
+                          "type": "integer"
+                        }
+                      }
+                    }
+                  },
+                  "example": {
+                    "status": "success",
+                    "code": 200,
+                    "result": {
+                      "name": "Tolik",
+                      "token": {
+                        "accessToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MDcyYzJjNmY1N2VlYzM1ZDAwYjk0OGUiLCJ0eXBlIjoiYWNjZXNzIiwiaWF0IjoxNjE4MTQwMDU1LCJleHAiOjE2MTgxNDE4NTV9.-X9Oms9dvb6kv_ExMrHZCZAIRcAyaFDpsEQoZQNFdm4",
+                        "expires_on": 1618141855729
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "404": {
+          "description": "User with such refresh token was not found"
+        },
+        "500": {
+          "description": "Server error"
         }
       }
     },
@@ -281,6 +402,81 @@
   },
   "components": {
     "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "ObjectId",
+            "description": "Id generated by MongoDB"
+          },
+          "name": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "subscription": {
+            "type": "string"
+          },
+          "avatar": {
+            "type": "string"
+          },
+          "verify": {
+            "type": "boolean"
+          },
+          "verifyToken": {
+            "type": "string"
+          },
+          "onlyGoogleRegister": {
+            "type": "boolean"
+          },
+          "token": {
+            "type": "object",
+            "properties": {
+              "accessToken": {
+                "type": "string"
+              },
+              "refreshToken": {
+                "type": "string"
+              }
+            }
+          },
+          "createdAt": {
+            "type": "Date"
+          },
+          "updatedAt": {
+            "type": "Date"
+          }
+        }
+      },
+      "Test": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "ObjectId",
+            "description": "Id generated by MongoDB"
+          },
+          "questionId": {
+            "type": "integer"
+          },
+          "question": {
+            "type": "string"
+          },
+          "answers": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "example": "['apple', 'orange', 'banana']"
+          },
+          "rightAnswer": {
+            "type": "string"
+          }
+        }
+      },
       "RegisterUser": {
         "type": "object",
         "required": ["name", "email", "password"],
@@ -315,27 +511,6 @@
         "example": {
           "email": "iivanov@mail.com",
           "password": "examplepassword"
-        }
-      },
-      "Test": {
-        "type": "object",
-        "properties": {
-          "questionId": {
-            "type": "integer"
-          },
-          "question": {
-            "type": "string"
-          },
-          "answers": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
-            "example": "['apple', 'orange', 'banana']"
-          },
-          "rightAnswer": {
-            "type": "string"
-          }
         }
       },
       "TestsResponse": {
