# utils/guard.js
@@ -4,11 +4,9 @@ const { HTTP_CODE } = require('./constants');
 
 const guard = (req, res, next) => {
   passport.authenticate('jwt', { session: false }, (err, user) => {
-    const token = req.get('Authorization')?.split(' ')[1];    
+    const token = req.get('Authorization')?.split(' ')[1];
 
-    if (!user || err || token !== user.token) {
-      console.log('We are here', token);
-
+    if (!user || err || token !== user.token.accessToken) {
       return res.status(HTTP_CODE.FORBIDDEN).json({
         status: 'error',
         code: HTTP_CODE.FORBIDDEN,
